--- a/backend/package.json
+++ b/backend/package.json
@@ -1,23 +1,27 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "start": "ts-node server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/mongoose": "^5.11.97",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "mongoose": "^7.4.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
-  }
+	"name": "backend",
+	"version": "1.0.0",
+	"description": "",
+	"main": "server.js",
+	"scripts": {
+		"start": "ts-node server.ts",
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"dev": "nodemon server.ts"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"@types/cors": "^2.8.13",
+		"@types/express": "^4.17.17",
+		"@types/mongoose": "^5.11.97",
+		"cors": "^2.8.5",
+		"dotenv": "^16.3.1",
+		"express": "^4.18.2",
+		"jsonwebtoken": "^9.0.1",
+		"mongoose": "^7.4.3",
+		"nodemon": "^3.0.1",
+		"ts-node": "^10.9.1",
+		"typescript": "^5.1.6"
+	}
 }
