--- a/backend/package.json
+++ b/backend/package.json
@@ -12,16 +12,22 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"@types/cors": "^2.8.13",
-		"@types/express": "^4.17.17",
-		"@types/mongoose": "^5.11.97",
+		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"jsonwebtoken": "^9.0.1",
+		"mongodb": "^5.7.0",
 		"mongoose": "^7.4.3",
 		"nodemon": "^3.0.1",
 		"ts-node": "^10.9.1",
 		"typescript": "^5.1.6"
+	},
+	"devDependencies": {
+		"@types/cookie-parser": "^1.4.3",
+		"@types/cors": "^2.8.13",
+		"@types/express": "^4.17.17",
+		"@types/jsonwebtoken": "^9.0.2",
+		"@types/mongoose": "^5.11.97"
 	}
 }
